# sports-database

./: pyproject.toml
src/nhl/: analyzer.py  fetcher.py  notebook_gen.py
tests/: test_notebook_gen.py
