[project]
name = "sports-database"
version = "0.1.0"
description = "NHL sports database"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "nbformat>=5.9",
    "sqlalchemy>=2.0",
]

[project.scripts]
nhl-explore = "nhl.notebook_gen:main"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "requests-mock>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nhl"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
